--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -1,11 +1,16 @@
 .header {
-	padding: 20px 0px;
 	background-color: $main-color;
+	position: fixed;
+	width: 100%;
+	z-index: 5;
 }
-.header__container {
+.header__wrapper {
+	height: 100%;
+	padding: 20px 0px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 .header__logo {
 	font-weight: 700;
@@ -18,22 +23,66 @@
 	align-items: center;
 }
 .menu {
+	@media (max-width: 992px) {
+		position: fixed;
+		top: 0;
+		left: -100%;
+		// left: 0;
+		width: 80vw;
+		height: 100vh;
+		overflow: auto;
+		background-color: $main-color;
+		transition: all 0.6s ease 0s;
+		visibility: hidden;
+		z-index: 2;
+		&.active {
+			left: 0;
+			visibility: visible;
+		}
+	}
 }
 .menu__list {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin: 0px -20px
+	margin: 0px -20px;
+	@media (max-width: 1060px) {
+		margin: 0px -15px;
+	}
+	@media (max-width: 992px) {
+		flex-direction: column;
+		justify-content: center;
+		padding: 80px 15px;
+		margin: 0;
+	}
 }
 .menu__item {
 	padding: 0px 20px;
 	font-weight: 400;
 	font-size: 14px;
 	color: $color-white;
+	@media (max-width: 1060px) {
+		padding: 0px 15px;
+	}
+	@media (max-width: 992px) {
+		font-size: 20px;
+		margin-bottom: 30px;
+		width: 100%;
+		text-align: center;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
 }
 .menu__link {
+	@media (max-width: 992px) {
+		display: block;
+		width: 100%;
+		padding: 5px 0px;
+	}
 }
 .cart {
+	display: block;
 	position: relative;
 	margin-left: 10px;
 }
@@ -49,4 +98,39 @@
 	font-weight: normal;
 	font-size: 14px;
 	color: $color-white;
+}
+
+.hamburger {
+	display: none;
+	width: 26px;
+	min-height: 27px;
+	margin-left: 20px;
+	@media (max-width: 992px) {
+		display: block;
+		span {
+			display: block;
+			height: 2px;
+			width: 100%;
+			background-color: $color-white;
+			margin-bottom: 5px;
+			transition: 0.5s all;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		&.active {
+			span {
+				margin-bottom: -2px;
+				&:nth-child(1){
+					transform: translateY(-1px) rotate(-45deg);
+				} 
+				&:nth-child(2) {
+					display: none;
+				} 
+				&:nth-child(3) {
+					transform: translateY(-1px) rotate(45deg);
+				}   
+			}
+		}		
+	}
 }
