--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -1,3 +1,7 @@
 $main-color: #484283;
 $color-white: #fff;
 $color-accent: #f14f4f;
+$color-dark-accent: #cc4949;
+$color-bg: #fff4ee;
+$color-text: #444B58;
+$color-gray: #b2b5bb;
