--- a/src/scss/blocks/buttons.scss
+++ b/src/scss/blocks/buttons.scss
@@ -6,4 +6,11 @@
 	font-weight: 400;
 	font-size: 16px;
 	color: $color-white;
+	transition: all 0.3s ease 0s;
+	@media (hover: hover) and (pointer: fine) {
+		&:hover {
+			background-color: $color-dark-accent;
+		}
+	}
+
 }
