--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -85,6 +85,15 @@
 	display: block;
 	position: relative;
 	margin-left: 10px;
+	width: 20px;
+	height: 20px;
+	svg {
+		display: block;
+		width: 100%;
+		height: 100%;
+		fill: $color-white;
+		object-fit: cover;
+	}
 }
 .cart__count {
 	position: absolute;
