--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,5 @@
 @import 'blocks/header.scss';
 @import 'blocks/promo.scss';
 @import 'blocks/buttons.scss';
+@import 'blocks/catalog.scss';
+@import 'blocks/titles.scss';
