--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -44,8 +44,23 @@ textarea {
 	appearance: none;
     outline: none;
 }
+
 textarea {
 	resize: none;
+}
+
+// Remove Arrows from input
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 .js-focus-visible :focus:not(.focus-visible) {
