--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 
 //============libs============
 @import 'libs_css/normalize.scss';
+@import 'libs_css/nouislider.min.scss';
 // @import '../../node_modules/swiper/swiper-bundle.css';
 // @import 'libs_css/swiper-bundle.scss';
 
