--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -10,6 +10,7 @@ body {
     background-color: #fff;
     font-weight: normal;
     font-size: 14px;
+    line-height: 1;
     &.scroll-lock {
         overflow: hidden;
     }
