--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -4,4 +4,6 @@ $color-accent: #f14f4f;
 $color-dark-accent: #cc4949;
 $color-bg: #fff4ee;
 $color-text: #444B58;
+$color-dark-text: #31343C;
 $color-gray: #b2b5bb;
+$color-cameo: #dbbba9;
