--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -5,5 +5,6 @@ $color-dark-accent: #cc4949;
 $color-bg: #fff4ee;
 $color-text: #444B58;
 $color-dark-text: #31343C;
+$color-light-text: #808080;
 $color-gray: #b2b5bb;
 $color-cameo: #dbbba9;
