--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,3 +17,5 @@
 @import 'blocks/buttons.scss';
 @import 'blocks/catalog.scss';
 @import 'blocks/titles.scss';
+@import 'blocks/about.scss';
+@import 'blocks/quiz.scss';
