--- a/src/scss/blocks/quiz.scss
+++ b/src/scss/blocks/quiz.scss
@@ -5,10 +5,10 @@
 	padding: 40px 100px;
 	background-color: $color-bg;
 	border-radius: 4px;
-	display: none;
-	&.active {
-		display: block;
-	}
+	// display: none;
+	// &.active {
+	// 	display: block;
+	// }
 
 	&__text {
 		display: inline-block;
@@ -79,6 +79,18 @@
 			}
 		}
 	}
+	&__message{
+		opacity: 0;
+		visibility: hidden;
+		font-weight: 400;
+		font-size: 16px;
+		color: $color-accent;
+		transition: opacity all 0.3s ease 0s, visibility all 0.3s ease 0s;
+		&.active {
+			opacity: 1;
+			visibility: visible;
+		}
+	}
 	&__checkboxes {
 		margin-top: 30px;
 		display: flex;
@@ -100,7 +112,7 @@
 			left: 0;
 		}
 	}
-	&__message{
+	&__comment {
 		margin: 20px 0px 122px 0px;
 		width: 465px;
 		height: 246px;
@@ -153,6 +165,14 @@
 				background-size: cover;
 				opacity: 0;
 				transition: opacity 0.3s ease-in-out;
+			}
+		}
+		&.error {
+			.custom-checkbox__text {
+				&::before {
+					content:'';
+					border: 1px solid $color-accent;
+				}
 			}
 		}
 	}
