--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,7 @@
 @import 'global/fonts.scss';
 @import 'global/base.scss';
 @import 'global/container.scss';
-// @import 'global/animation.scss';
+@import 'global/animation.scss';
 
 //============libs============
 @import 'libs_css/normalize.scss';
