--- a/src/scss/global/animation.scss
+++ b/src/scss/global/animation.scss
@@ -1,11 +1,15 @@
 .fade {
 	animation-name: fade;
-	animation-duration: 1.5s;
+	animation-duration: 6s;
+	animation-timing-function: cubic-bezier(0, 3.0, 3.0, 0);
 }
   
 @keyframes fade{
-	from {opacity: .1}
-	to {opacity: 1}
+	from {opacity: 0}
+	10% {opacity: 1}
+	50% {opacity: 1}
+	90% {opacity: 1}
+	to {opacity: 0}
 }
 
 .fadescale {
