--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -8,9 +8,10 @@ body {
     font-family: 'Intro', sans-serif;
     color: #000;
     background-color: #fff;
-    font-weight: normal;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 16px;
     line-height: 1;
+    color: $color-text;
     &.scroll-lock {
         overflow: hidden;
     }
