--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,3 +19,5 @@
 @import 'blocks/titles.scss';
 @import 'blocks/about.scss';
 @import 'blocks/quiz.scss';
+@import 'blocks/team.scss';
+@import 'blocks/questions.scss';
