--- a/src/scss/global/container.scss
+++ b/src/scss/global/container.scss
@@ -3,10 +3,13 @@ $maxWidthContainer: 1180;
 .container {
     width: $maxWidthContainer + px;
     margin: 0 auto;
-    @media (max-width: 1200px) {
-        // max-width: 960px;
+    @media (max-width: 1220px) {
         width: 100%;
-        padding: 0 20px;
+        padding: 0 15px;
+    }
+    @media (max-width: 1200px) {
+        width: 100%;
+        padding: 0 40px;
     }
     // @media (max-width: 992px) {
     //     max-width: 720px;
