--- a/src/scss/blocks/catalog.scss
+++ b/src/scss/blocks/catalog.scss
@@ -1,6 +1,5 @@
 .catalog {
 	padding: 60px 0px;
-
 	&__wrapper {
 		width: 100%;
 		margin-top: 40px;
@@ -8,12 +7,33 @@
 		justify-content: flex-start;
 		align-items: flex-start;
 		gap: 20px;
+		position: relative;
+		@media (max-width: 992px) {
+			margin-top: 20px;
+		}
 	}
 
 	&__filters {
-		flex: 0 0 24%;
+		flex: 0 0 280px;
 		background-color: $color-bg;
 		padding: 20px;
+		@media (max-width: 992px) {
+			position: absolute;
+			width: 280px;
+			top: 0;
+			left: -100%;
+			height: 100vh;
+			overflow: auto;
+			border: solid 1px $color-text;
+			box-shadow: 0 0 15px 0px $color-text;
+			transition: all 0.6s ease 0s;
+			visibility: hidden;
+			z-index: 2;
+			&.active {
+				left: 0;
+				visibility: visible;
+			}
+		}
 	}
 
 	&__caption {
@@ -48,14 +68,64 @@
 	&__wrap {
 		width: 100%;
 		display: flex;
-		justify-content: space-between;
+		justify-content: flex-start;
 		align-items: flex-start;
 		flex-wrap: wrap;
 		gap: 20px;
+		@media (max-width: 992px) {
+			justify-content: center;
+		}
 	}
 
 	&__more {
 		margin: 40px auto 0px auto;
+	}
+}
+
+.catalog-hamburger {
+	display: none;
+	width: 135px;
+	min-height: 27px;
+	margin-top: 10px;
+	@media (max-width: 992px) {
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		gap: 10px;
+		&__lines {
+			width: 30px;
+			span {
+				display: block;
+				height: 2px;
+				width: 100%;
+				background-color: $color-dark-text;
+				margin-bottom: 5px;
+				transition: 0.5s all;
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+		}
+		&.active {
+			.catalog-hamburger__lines {
+				span {
+					margin-bottom: -2px;
+					&:nth-child(1){
+						transform: translateY(-1px) rotate(-45deg);
+					} 
+					&:nth-child(2) {
+						display: none;
+					} 
+					&:nth-child(3) {
+						transform: translateY(-1px) rotate(45deg);
+					}   
+				}
+			}
+		}
+		&__text {
+			font-weight: 700;
+		}
+		
 	}
 }
 
