--- a/src/scss/blocks/questions.scss
+++ b/src/scss/blocks/questions.scss
@@ -61,5 +61,8 @@
 		opacity: 0;
 		transition: all 0.3s ease-out;
 		will-change: max-height;
+		@media (max-width: 768px) {
+			width: 100%;
+		}
 	}
 }
