--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,3 +22,5 @@
 @import 'blocks/team.scss';
 @import 'blocks/questions.scss';
 @import 'blocks/contacts.scss';
+@import 'blocks/connect.scss';
+@import 'blocks/footer.scss';
