--- a/src/scss/blocks/contacts.scss
+++ b/src/scss/blocks/contacts.scss
@@ -1,21 +1,31 @@
 .contacts {
 	padding: 60px 0px;
 	background-color: $bg;
-	&__container {
+	@media (max-width: 768px) {
+		padding: 40px 0px;		
 	}
 
 	&__wrapper {
 		display: flex;
 		align-items: center;
 		justify-content: flex-start;
+		@media (max-width: 993px) {
+			flex-wrap: wrap;
+		}
 	}
 
 	&__info {
 		flex: 0 1 50%;
+		@media (max-width: 993px) {
+			flex: 0 1 100%;
+		}
 	}
 
 	&__title {
 		margin-bottom: 20px;
+		@media (max-width: 576px) {
+			margin-bottom: 0;
+		}
 	}
 
 	&__subtitle {
@@ -36,12 +46,19 @@
 				color: $color-dark-accent;
 			}
 		}
+		@media (max-width: 576px) {
+			margin-top: 20px;
+			font-size: 25px;
+		}
 	}
 
 	&__address {
 		margin-top: 15px;
 		font-style: normal;
 		font-size: 18px;
+		@media (max-width: 576px) {
+			font-size: 14px;
+		}
 	}
 
 	&__map {
@@ -53,6 +70,17 @@
 		background-size: 60px;
 		[class*="copyrights-pane"] {
 			display: none !important;
+		}
+		@media (max-width: 1200px) {
+			width: 450px;
+			height: 450px;
+		}
+		@media (max-width: 993px) {
+			width: 100%;
+			margin-top: 20px;
+		}
+		@media (max-width: 576px) {
+			height: 350px;
 		}
 	}
 }
@@ -118,6 +146,16 @@
 			width: 0;
 			height: 0;
 		}
+		@media (max-width: 768px) {
+			max-width: 330px;
+		}
+		@media (max-width: 576px) {
+			left: -129px;
+			max-width: 280px;
+			&::after {
+				left: 130px;
+			}
+		}
 	}
 }
 
@@ -133,9 +171,11 @@
 		border-radius: 100%;
 		background-position: center;
 		background-repeat: no-repeat;
+		transition: all 0.3s ease 0s;
+		will-change: transform;
 		@media (hover: hover) and (pointer: fine) {
 			&:hover {
-				box-shadow: 0px 0px 5px #0E5A4C;
+				transform: scale(1.1)
 			}
 		}
 		&_vk {
