--- a/src/scss/blocks/catalog.scss
+++ b/src/scss/blocks/catalog.scss
@@ -6,7 +6,6 @@
 		display: flex;
 		justify-content: flex-start;
 		align-items: flex-start;
-		gap: 20px;
 		position: relative;
 		@media (max-width: 992px) {
 			margin-top: 20px;
@@ -17,9 +16,11 @@
 		flex: 0 0 280px;
 		background-color: $color-bg;
 		padding: 20px;
+		margin-right: 20px;
 		@media (max-width: 992px) {
 			position: absolute;
 			width: 280px;
+			margin-right: 0;
 			top: 0;
 			left: -100%;
 			height: 100vh;
@@ -66,19 +67,18 @@
 	}
 
 	&__wrap {
-		width: 100%;
 		display: flex;
 		justify-content: flex-start;
 		align-items: flex-start;
 		flex-wrap: wrap;
-		gap: 20px;
+		margin: 0px -10px;
 		@media (max-width: 992px) {
 			justify-content: center;
 		}
 	}
 
 	&__more {
-		margin: 40px auto 0px auto;
+		margin: 20px auto 0px auto;
 	}
 }
 
@@ -91,9 +91,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: flex-start;
-		gap: 10px;
 		&__lines {
 			width: 30px;
+			margin-right: 10px;
 			span {
 				display: block;
 				height: 2px;
@@ -131,6 +131,7 @@
 
 .catalog-item {
 	width: 278px;
+	margin: 0px 10px 20px 10px;
 	&__img {
 		position: relative;
 		width: 100%;
@@ -151,7 +152,6 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		gap: 40px;
 		background: rgba(255, 255, 255, 0.6);
 		opacity: 0;
 		transition: opacity 0.3s ease-in-out;
@@ -167,10 +167,14 @@
 		align-items: center;
 		justify-content: center;
 		border-radius: 100%;
+		margin-right: 40px;
 		width: 80px;
 		height: 80px;
 		background-color: $color-text;
 		transition: background-color 0.3s ease-in-out;
+		&:last-child {
+			margin-right: 0;
+		}
 		svg {
 			width: 30px;
 			height: 30px;
