--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -28,18 +28,22 @@
 		display: flex;
 		align-items: center;
 		justify-content: flex-start;
-		gap: 40px;
-		@media (max-width: 1200px) {
-			gap: 25px;
-		}
-		@media (max-width: 992px) {
-			margin-top: 20px;
-			flex-direction: column;
-			gap: 15px;
-		}
 	}
 
 	&__item {
 		font-size: 14px;
+		margin-right: 40px;
+		&:last-child {
+			margin-right: 0;
+		}
+		@media (max-width: 1200px) {
+			margin-right: 25px;
+		}
+		@media (max-width: 992px) {
+			margin-top: 20px;
+			flex-direction: column;
+			margin-right: 0px;
+
+		}
 	}
 }
