--- a/src/scss/blocks/quiz.scss
+++ b/src/scss/blocks/quiz.scss
@@ -58,18 +58,23 @@
 	}
 
 	&__wrapper {
-		margin-top: 20px;
-		padding-bottom: 40px;
+		padding-bottom: 20px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-wrap: wrap;
-		column-gap: 70px;
-		row-gap: 20px;
+		margin: 35px -35px 0 -35px;
+		@media (max-width: 577px) {
+			margin: 35px 0px 0px 0px;
+		}
 	}
 
 	&__item {
+		margin: 0px 35px 20px 35px;
 		width: 280px;
+		@media (max-width: 577px) {
+			margin: 0px 0px 20px 0px;
+		}
 	}
 
 	&__img {
@@ -91,7 +96,6 @@
 		border-top: solid 1px $color-light-text;
 		@media (max-width: 768px) {
 			flex-wrap: wrap;
-			gap: 10px;
 		}
 		@media (max-width: 576px) {
 			flex-direction: column;
@@ -119,6 +123,9 @@
 				background-color: $color-text;
 			}
 		}
+		@media (max-width: 576px) {
+			margin-top: 10px;
+		}
 	}
 	&__message{
 		opacity: 0;
@@ -134,8 +141,9 @@
 		@media (max-width: 768px) {
 			flex: 1 1 100%;
 			order: 3;
+			margin-top: 10px;
 		}
-		@media (max-width: 577px) {
+		@media (max-width: 576px) {
 			text-align: center;
 		}
 	}
@@ -144,17 +152,8 @@
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
-		gap: 70px;
-		@media (max-width: 1200px) {
-			gap: 50px;
-		}
-		@media (max-width: 992px) {
-			gap: 35px;
-		}
 		@media (max-width: 768px) {
 			flex-wrap: wrap;
-			column-gap: 30px;
-			row-gap: 15px;
 		}
 	}
 	&__image {
@@ -198,6 +197,19 @@
 
 	.custom-checkbox {
 		position: relative;
+		margin-right: 70px;
+		&:last-child {
+			margin-right: 0;
+		}
+		@media (max-width: 1200px) {
+			margin-right: 50px;
+		}
+		@media (max-width: 992px) {
+			margin-right: 35px;
+		}
+		@media (max-width: 768px) {
+			margin-right: 30px;
+		}
 		&__input {
 			appearance: none;
 			position: absolute;
