--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -91,7 +91,8 @@ input[type=number] {
 
 a:focus,
 button:focus,
-select:focus {
+select:focus,
+input:focus  {
     outline: 2px solid $color-dark-accent;
     outline-offset: 1px;
 }
