--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,4 +24,4 @@
 @import 'blocks/contacts.scss';
 @import 'blocks/connect.scss';
 @import 'blocks/footer.scss';
-@import 'blocks/popup.scss';
+@import 'blocks/modal.scss';
