--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -1,6 +1,6 @@
 $transition-time: 0.5s;
 
-.overlay {
+.modal-overlay {
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -8,10 +8,11 @@ $transition-time: 0.5s;
 	bottom: 0;
 	width: 100%;
 	z-index: 1000;
-	background-color: rgba(0,0,0,.5);
+	background: rgba(68, 75, 88, 0.7);
 	outline: none;
-	pointer-events: none;
 	text-align: center;
+	cursor: pointer;
+	pointer-events: none;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity $transition-time, visibility $transition-time;
@@ -23,47 +24,165 @@ $transition-time: 0.5s;
 	}
 	&.is-open {
 		pointer-events: auto;
-		visibility: visible;
 		opacity: 1;
+		visibility: visible;
 		overflow-y: scroll;
 		-webkit-overflow-scrolling: touch;
 	}
 }
 
-.modal-name {
+.modal {
 	position: relative;
 	display: inline-block;
 	margin: 50px auto;
 	vertical-align: middle;
-	padding: 20px;
-	width: 500px;
-	height: 100px;
-	background-color: #fff;
-	box-shadow: 0px 0px 30px rgba(0,0,0, .8);
-	border-radius: 5px;
+	padding: 40px;
+	background-color: $color-white;
+	cursor: default;
+	pointer-events: none;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity $transition-time, visibility $transition-time;
-	//* анимация появления сверху
-	// transform: translateY(-100px);
-	// transition: opacity $transition-time, transform $transition-time, visibility $transition-time;
 	&.modal-open {
+		pointer-events: auto;
 		opacity: 1;
 		visibility: visible;
-		//* анимация появления сверху
-		// transform: translateY(0);
-	}
-	@media (max-width: 576px) {
-		width: 90%;
 	}
 	&__close {
 		position: absolute;
 		right: 5px;
 		top: 5px;
-		font-size: 50px;
-		width: 20px;
-		height: 20px;
-		color: #000;
-		line-height: 20px;
+		background: url('../img/cross.svg') center center/cover no-repeat;
+		transform: rotate(45deg);
+		width: 17px;
+		height: 17px;
 	}
+}
+
+.modal-prod {
+	padding: 40px;
+	width: 1140px;
+	&__content {
+		display: flex;
+		align-items: flex-start;
+		justify-content: center;
+		flex-wrap: wrap;
+	}
+}
+
+.modal-slider {
+	width: 520px;
+}
+.slider-main {
+	width: 100%;
+	height: 462px;
+	&__item {
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+}
+
+.slider-min {
+	width: 100%;
+	height: 76px;
+	margin-top: 20px;
+	&__item {
+		width: 70px;
+		cursor: pointer;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+		@media (hover: hover) and (pointer: fine) {
+			&:hover {
+				opacity: 0.5;
+			}
+		}
+		&.swiper-slide-thumb-active {
+			opacity: 0.5;
+			pointer-events: none;
+		}
+	}
+}
+.modal-descr {
+	margin-top: 40px;
+	text-align: left;
+	&__title {
+		font-size: 24px;
+	}
+
+	&__text {
+		width: 81%;
+		margin-top: 20px;
+		line-height: 22px;
+	}
+}
+.modal-info {
+	width: 50%;
+	&__top {
+	}
+
+	&__vendor {
+	}
+
+	&__quantity {
+	}
+
+	&__title {
+	}
+
+	&__rate {
+	}
+
+	&__sizes {
+	}
+
+	&__subtitle {
+	}
+
+	&__sizes-list {
+	}
+
+	&__item-size {
+	}
+
+	&__size {
+	}
+
+	&__price {
+	}
+
+	&__current-price {
+	}
+
+	&__old-price {
+	}
+
+	&__order {
+	}
+
+	&__note {
+	}
+
+	&__note-item {
+	}
+}
+
+.modal-property {
+
+	&__title {
+	}
+
+	&__chars {
+	}
+
+	&__item {
+	}
+}
+.modal-video {
+	width: 100%;
 }
