--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -13,7 +13,11 @@ body {
     line-height: 1;
     color: $color-text;
     &.scroll-lock {
+        position: fixed;
+        right: 0;
+        left: 0;
         overflow: hidden;
+        width: 100%;
     }
 }
 
