--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -65,7 +65,7 @@ $transition-time: 0.5s;
 	&__content {
 		display: flex;
 		align-items: flex-start;
-		justify-content: center;
+		justify-content: flex-start;
 		flex-wrap: wrap;
 	}
 }
@@ -108,9 +108,127 @@ $transition-time: 0.5s;
 		}
 	}
 }
-.modal-descr {
-	margin-top: 40px;
+
+.modal-info {
+	width: 43%;
+	padding-left: 20px;
 	text-align: left;
+	&__top {
+		color: $color-gray;
+	}
+
+	&__vendor {
+		margin-right: 47px;
+	}
+
+	&__quantity {
+		span {
+			color: $color-text;
+		}
+	}
+
+	&__title {
+		margin-top: 40px;
+		font-size: 24px;
+		line-height: 33px;
+	}
+
+	&__rate {
+		margin-top: 20px;
+		img {
+			width: 18px;
+			height: 18px;
+			object-fit: cover;
+		}
+	}
+
+	&__sizes {
+		margin-top: 20px;
+	}
+
+	&__sizes-list {
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		flex-wrap: wrap;
+		margin: 20px -10px 0 -10px;
+	}
+
+	&__item-size {
+		margin: 0px 10px 20px 10px;
+	}
+
+	&__size {
+		font-size: 14px;
+		width: 70px;
+		height: 32px;
+		border: solid 1px $color-gray;
+		border-radius: 4px;
+	}
+
+	&__price {
+		margin-top: 20px;
+	}
+
+	&__current-price {
+		font-weight: 700;
+		font-size: 30px;
+		margin-right: 32px;
+	}
+
+	&__old-price {
+		color: $color-gray;
+	}
+
+	&__order {
+		width: 100%;
+		margin-top: 79px;
+	}
+
+	&__note {
+		margin-top: 21px;
+		font-size: 14px;
+		color: $color-gray;
+	}
+
+	&__note-item {
+		margin-bottom: 10px;
+		padding-left: 25px;
+		background: url('../img/check-list.svg') left center no-repeat;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
+.modal-property {
+	margin-top: 40px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	text-align: left;
+}
+.modal-char {
+	padding-left: 20px;
+
+	&__title {
+		font-size: 24px;
+	}
+
+	&__items {
+		margin-top: 20px;
+	}
+
+	&__item {
+		margin-bottom: 10px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+.modal-descr {
+	width: 520px;
 	&__title {
 		font-size: 24px;
 	}
@@ -121,68 +239,16 @@ $transition-time: 0.5s;
 		line-height: 22px;
 	}
 }
-.modal-info {
-	width: 50%;
-	&__top {
-	}
 
-	&__vendor {
-	}
-
-	&__quantity {
-	}
-
-	&__title {
-	}
-
-	&__rate {
-	}
-
-	&__sizes {
-	}
-
-	&__subtitle {
-	}
-
-	&__sizes-list {
-	}
-
-	&__item-size {
-	}
-
-	&__size {
-	}
-
-	&__price {
-	}
-
-	&__current-price {
-	}
-
-	&__old-price {
-	}
-
-	&__order {
-	}
-
-	&__note {
-	}
-
-	&__note-item {
-	}
-}
-
-.modal-property {
-
-	&__title {
-	}
-
-	&__chars {
-	}
-
-	&__item {
-	}
-}
 .modal-video {
+	margin-top: 40px;
 	width: 100%;
+	height: 450px;
+	iframe {
+		display: block;
+		border: none;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
