--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -13,6 +13,7 @@ $transition-time: 0.5s;
 	text-align: center;
 	cursor: pointer;
 	pointer-events: none;
+	// overflow-y: auto;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity $transition-time, visibility $transition-time;
@@ -67,6 +68,7 @@ $transition-time: 0.5s;
 		align-items: flex-start;
 		justify-content: flex-start;
 		flex-wrap: wrap;
+		// height: 100%;
 	}
 }
 
@@ -113,8 +115,14 @@ $transition-time: 0.5s;
 	width: 43%;
 	padding-left: 20px;
 	text-align: left;
+	display: flex;
+	flex-direction: column;
+	height: 544px;
 	&__top {
 		color: $color-gray;
+	}
+	&__wrapper {
+		flex: 1 1 auto;
 	}
 
 	&__vendor {
@@ -161,9 +169,10 @@ $transition-time: 0.5s;
 	&__size {
 		font-size: 14px;
 		width: 70px;
-		height: 32px;
+		padding: 6px 0px;
 		border: solid 1px $color-gray;
 		border-radius: 4px;
+		text-align: center;
 	}
 
 	&__price {
@@ -182,7 +191,6 @@ $transition-time: 0.5s;
 
 	&__order {
 		width: 100%;
-		margin-top: 79px;
 	}
 
 	&__note {
