--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -20,6 +20,7 @@
 	color: $color-white;
 }
 .header__menu {
+	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -93,6 +94,7 @@
 		height: 100%;
 		fill: $color-white;
 		object-fit: cover;
+		pointer-events: none;
 	}
 }
 .cart__count {
@@ -107,6 +109,7 @@
 	font-weight: normal;
 	font-size: 14px;
 	color: $color-white;
+	pointer-events: none;
 }
 
 .hamburger {
