--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -13,7 +13,6 @@ body {
     line-height: 1;
     color: $color-text;
     &.scroll-lock {
-        position: relative;
         position: fixed;
         right: 0;
         left: 0;
@@ -28,8 +27,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: inherit;
 }
 
-ul, ol, li {
-	list-style-type: none;
+.list-reset {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 a {
