--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -28,6 +28,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: flex-start;
+		@media (max-width: 768px) {
+			flex-direction: column;
+		}
 	}
 
 	&__item {
@@ -41,9 +44,9 @@
 		}
 		@media (max-width: 992px) {
 			margin-top: 20px;
-			flex-direction: column;
-			margin-right: 0px;
-
+		}
+		@media (max-width: 768px) {
+			margin-right: 0px;	
 		}
 	}
 }
