--- a/src/scss/blocks/mini-cart.scss
+++ b/src/scss/blocks/mini-cart.scss
@@ -6,11 +6,14 @@
 	background-color: $color-white;
 	opacity: 0;
 	visibility: hidden;
-	transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+	// transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 	&--open {
 		opacity: 1;
 		visibility: visible;
 		transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+	}
+	@media (max-width: 576px) {
+		width: 300px;
 	}
 
 	&__products {
@@ -48,6 +51,12 @@
 		}
 		&--active {
 			background: rgba(204, 217, 242, 0.2);
+		}
+		@media (max-width: 576px) {
+			padding: 5px 20px 5px 20px;
+			flex-direction: column;
+			text-align: center;
+			
 		}
 	}
 
@@ -91,14 +100,23 @@
 		justify-content: space-between;
 		padding: 20px;
 		box-shadow: 0px -4px 10px rgba(0, 13, 84, 0.1);
+		@media (max-width: 576px) {
+			flex-direction: column;
+		}
 	}
 
 	&__itog {
+		@media (max-width: 576px) {
+			display: flex;
+		}
 	}
 
 	&__txt {
 		display: block;
 		margin-bottom: 10px;
+		@media (max-width: 576px) {
+			margin-right: 10px;
+		}
 	}
 
 	&__summ {
@@ -107,5 +125,8 @@
 	}
 
 	&__btn {
+		@media (max-width: 576px) {
+			margin-top: 15px;
+		}
 	}
 }
