--- a/src/scss/blocks/modal-cart.scss
+++ b/src/scss/blocks/modal-cart.scss
@@ -1,6 +1,10 @@
 .modal-cart {
 	width: 580px;
 	padding: 30px;
+	@media (max-width: 600px) {
+		width: 90%;
+		padding: 30px 10px;
+	}
 	&__content {
 	}
 
@@ -8,6 +12,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		@media (max-width: 576px) {
+			flex-direction: column;
+		}
 	}
 
 	&__title {
@@ -18,6 +25,9 @@
 	&__number {
 		font-size: 14px;
 		color: $color-gray;
+		@media (max-width: 576px) {
+			margin-top: 15px;
+		}
 	}
 }
 
@@ -27,6 +37,10 @@
 	border: 1px solid #D9D9D9;
 	border-radius: 4px;
 	text-align: left;
+	@media (max-width: 576px) {
+		margin-top: 20px;
+		padding: 20px 10px;
+	}
 	&__quantity {
 		font-size: 16px;
 		color: $color-gray;
@@ -84,9 +98,16 @@
 	&:last-child {
 		margin-bottom: 0;
 	}
+	@media (max-width: 576px) {
+		flex-direction: column;
+		text-align: center;
+	}
 	&__image {
 		width: 80px;
 		height: 80px;
+		@media (max-width: 576px) {
+			margin-bottom: 10px;
+		}
 		img {
 			width: 100%;
 			height: 100%;
@@ -101,6 +122,7 @@
 
 	&__title {
 		font-size: 14px;
+		line-height: normal;
 	}
 
 	&__price {
@@ -111,6 +133,9 @@
 
 	&__delete {
 		color: $color-gray;
+		@media (max-width: 576px) {
+			margin-top: 20px;
+		}
 	}
 }
 .modal-cart-form {
@@ -130,6 +155,9 @@
 
 	&__submit {
 		margin-top: 20px;
+		@media (max-width: 576px) {
+			margin: 20px auto 0px auto;
+		}
 	}
 	&__message {
 		position: absolute;
