--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -84,20 +84,46 @@ $transition-time: 0.5s;
 		align-items: flex-start;
 		justify-content: flex-start;
 		flex-wrap: wrap;
+		@media (max-width: 992px) {
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+	@media (max-width: 1200px) {
+		width: 90%;
+	}
+	@media (max-width: 992px) {
+		padding: 30px 20px;
 	}
 }
 
 .modal-slider {
 	width: 520px;
+	@media (max-width: 1200px) {
+		width: 50%;
+	}
+	@media (max-width: 992px) {
+		width: 70%;
+	}
+	@media (max-width: 768px) {
+		width: 100%;
+	}
+
 }
 .slider-main {
 	width: 100%;
 	height: 462px;
+	@media (max-width: 576px) {
+		height: 300px;
+	}
 	&__item {
 		img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+			@media (max-width: 992px) {
+				width: auto;
+			}
 		}
 	}
 }
@@ -133,6 +159,15 @@ $transition-time: 0.5s;
 	display: flex;
 	flex-direction: column;
 	height: 544px;
+	@media (max-width: 1200px) {
+		width: 50%;
+	}
+	@media (max-width: 992px) {
+		margin-top: 20px;
+		width: 100%;
+		height: auto;
+		padding-left: 0;
+	}
 	&__top {
 		color: $color-gray;
 	}
@@ -145,6 +180,10 @@ $transition-time: 0.5s;
 	}
 
 	&__quantity {
+		@media (max-width: 576px) {
+			display: block;
+			margin-top: 10px;
+		}
 		span {
 			color: $color-text;
 		}
@@ -154,6 +193,10 @@ $transition-time: 0.5s;
 		margin-top: 40px;
 		font-size: 24px;
 		line-height: 33px;
+		@media (max-width: 576px) {
+			margin-top: 20px;
+			font-size: 17px;
+		}
 	}
 
 	&__rate {
@@ -206,6 +249,13 @@ $transition-time: 0.5s;
 
 	&__order {
 		width: 100%;
+		@media (max-width: 992px) {
+			margin-top: 30px;
+			width: 50%;
+		}
+		@media (max-width: 576px) {
+			width: 100%;
+		}
 	}
 
 	&__note {
@@ -228,12 +278,19 @@ $transition-time: 0.5s;
 	margin-top: 40px;
 	width: 100%;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: flex-start;
 	text-align: left;
+	@media (max-width: 768px) {
+		flex-direction: column;
+	}
 }
 .modal-char {
 	padding-left: 20px;
+	@media (max-width: 768px) {
+		padding-left: 0;
+		margin-top: 15px;
+	}
 
 	&__title {
 		font-size: 24px;
@@ -241,9 +298,13 @@ $transition-time: 0.5s;
 
 	&__items {
 		margin-top: 20px;
+		@media (max-width: 768px) {
+			margin-top: 10px;
+		}
 	}
 
 	&__item {
+		line-height: normal;
 		margin-bottom: 10px;
 		&:last-child {
 			margin-bottom: 0;
@@ -252,6 +313,12 @@ $transition-time: 0.5s;
 }
 .modal-descr {
 	width: 520px;
+	@media (max-width: 992px) {
+		width: 55%;
+	}
+	@media (max-width: 768px) {
+		width: 100%;
+	}
 	&__title {
 		font-size: 24px;
 	}
@@ -260,7 +327,14 @@ $transition-time: 0.5s;
 		width: 81%;
 		margin-top: 20px;
 		line-height: 22px;
+		@media (max-width: 992px) {
+			width: 100%;
+		}
+		@media (max-width: 768px) {
+			margin-top: 10px;
+		}
 	}
+
 }
 
 .modal-video {
@@ -273,5 +347,9 @@ $transition-time: 0.5s;
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+	}
+	@media (max-width: 768px) {
+		margin-top: 20px;
+		height: 260px;
 	}
 }
