--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -49,4 +49,26 @@
 			margin-right: 0px;	
 		}
 	}
+	&__link {
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			height: 1px;
+			background-color: currentColor;
+			transform: scaleX(0);
+			transform-origin: center;
+			transition: transform 0.3s ease-in-out;
+		}
+		@media (hover: hover) and (pointer: fine) {
+			&:hover {
+				&::before {
+					transform: scaleX(1);
+				}
+			}
+		}
+	}
 }
