--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -76,6 +76,26 @@
 	}
 }
 .menu__link {
+	position: relative;
+	&::before {
+		content: "";
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		height: 1px;
+		background-color: currentColor;
+		transform: scaleX(0);
+		transform-origin: center;
+		transition: transform 0.3s ease-in-out;
+	}
+	@media (hover: hover) and (pointer: fine) {
+		&:hover {
+			&::before {
+				transform: scaleX(1);
+			}
+		}
+	}
 	@media (max-width: 992px) {
 		display: block;
 		width: 100%;
@@ -96,8 +116,11 @@
 		object-fit: cover;
 		pointer-events: none;
 	}
-	&--inactive {
-		pointer-events: none;
+	// &--inactive {
+	// 	pointer-events: none;
+	// }
+	&:disabled {
+		opacity: 0.7;
 	}
 }
 .cart__count {
