--- a/src/scss/global/base.scss
+++ b/src/scss/global/base.scss
@@ -48,6 +48,7 @@ a {
 input[type="text"],
 input[type="email"],
 input[type="tel"],
+input[type="number"],
 textarea {
 	-webkit-appearance: none;
 	-moz-appearance: none;
@@ -96,8 +97,11 @@ input[type=number] {
 }
 
 a:focus,
-button:focus,
-select:focus  {
+select:focus,
+.noUi-handle:focus,
+.catalog-checkbox__label:focus,
+.catalog-item__btn:focus,
+.custom-checkbox__text:focus {
     outline: 2px solid $color-dark-accent;
     outline-offset: 1px;
 }
