--- a/src/scss/blocks/catalog.scss
+++ b/src/scss/blocks/catalog.scss
@@ -157,6 +157,7 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
+		display: none;
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -164,13 +165,19 @@
 		opacity: 0;
 		transition: opacity 0.3s ease-in-out;
 		@media (hover: hover) and (pointer: fine) {
+			// display: flex;
 			&:hover {
 				opacity: 1;
 			}
+			&--active {
+				opacity: 1;
+			}
 		}
-		&--active {
+		&--activeMob {
+			// display: flex;
 			opacity: 1;
 		}
+
 	}
 
 	&__btn {
