--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,3 +27,29 @@
 @import 'blocks/modal.scss';
 @import 'blocks/mini-cart.scss';
 @import 'blocks/modal-cart.scss';
+
+.pageup  {
+	opacity: 0;
+	display: block;
+	position: fixed;
+	bottom: 40px;
+	right: 30px;
+	width: 30px;
+	height: 30px;
+	z-index: 100;
+	transition: opacity 0.3s ease 0s;
+	svg {
+		width: 100%;
+		height: 100%;
+		fill: $color-cameo;
+		object-fit: cover;
+		pointer-events: none;
+	}
+	@media (max-width: 768px) {
+		bottom: 10px;
+		right: 10px;
+	}
+	&.active {
+		opacity: 1;
+	}
+}
