--- a/src/scss/blocks/catalog.scss
+++ b/src/scss/blocks/catalog.scss
@@ -157,24 +157,29 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		display: none;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		background: rgba(255, 255, 255, 0.6);
 		opacity: 0;
 		transition: opacity 0.3s ease-in-out;
+
 		@media (hover: hover) and (pointer: fine) {
-			// display: flex;
 			&:hover {
 				opacity: 1;
-			}
-			&--active {
-				opacity: 1;
+				.catalog-item__btn {
+					pointer-events: auto;
+				}
+
 			}
 		}
-		&--activeMob {
-			// display: flex;
+		&--focus {
+			opacity: 1;
+			.catalog-item__btn {
+				pointer-events: auto;
+			}
+		}
+		&--touch {
 			opacity: 1;
 		}
 
@@ -191,6 +196,7 @@
 		background-color: $color-text;
 		outline: none;
 		transition: background-color 0.3s ease-in-out;
+		pointer-events: none;
 		&:last-child {
 			margin-right: 0;
 		}
@@ -199,15 +205,15 @@
 			height: 30px;
 			fill: $color-white;
 			object-fit: cover;
+			pointer-events: none;
 		}
 		@media (hover: hover) and (pointer: fine) {
 			&:hover {
 				background-color: $color-dark-text;
 			}
 		}
-		&--disabled {
+		&:disabled {
 			opacity: 0.4;
-			pointer-events: none;
 		}
 	}
 
